--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -137,9 +137,11 @@
                             <li>[기본]<a href="./js/10.html"> 함수: 선언문</a></li>
                             <li>[기본]<a href="./js/11.html"> 함수: 표현식</a></li>
                             <li>[기본]<a href="./js/12.html"> 함수: 화살표현식</a></li>
-                            <li>[기본]<a href="./js/13.html"> 객체</a></li>
-                            <li>[기본]<a href="./js/14.html"> 참조에 의한 객체 복사</a></li>
-                            <li>[기본]<a href="./js/15.html"> 매서드와 this</a></li>
+                            <li>[객체:기본]<a href="./js/13.html"> 객체</a></li>
+                            <li>[객체:기본]<a href="./js/14.html"> 참조에 의한 객체 복사</a></li>
+                            <li>[객체:기본]<a href="./js/15.html"> 매서드와 this</a></li>
+                            <li>[객체:기본]<a href="./js/16.html"> new 연산자와 생성자 함수</a></li>
+                            <li>[객체:기본]<a href="./js/17.html"> </a></li>
                         </ol>
                     </ul>
                 <br>
