--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -37,6 +37,12 @@
                 <li><a href="./ex10_js.html">ex10 바로가기 객체</a>
                 <li><a href="./ex11_js.html">ex11 바로가기 매서드와this</a>
                 <li><a href="./ex12_js.html">ex12 바로가기 매서드와this:시계만들기 </a>
+                <li><a href="./ex13_js.html">ex13 바로가기 new 연산자와 생성자::계산기와 누진기 </a>
+            </ul>
+            <br>
+            
+            <ul>
+                <li><a href="./jsMore2.html">jsMore2 바로가기 : time 이미지 번갈아가며 바뀜 </a>
             </ul>
         </ul>
         <ul>
