--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -125,6 +125,10 @@
                         </ol>
                         <li>js</li>
                         <ol>
+                            <li>[기본:정리] <a href="./js/subSummation.html">기본 요약 보기</a></li>
+                            <li>[기본:예약어] <a href="./js/subSummReser.html">예약어 보기</a></li>
+
+
                             <li>[기본] <a href="./js/01.html"> </a></li>
                             <li>[기본] <a href="./js/02.html"> </a></li>
                             <li>[기본] <a href="./js/03.html"> </a></li>
