--- a/rwb/classHyo/js/16.html
+++ b/rwb/classHyo/js/16.html
@@ -12,7 +12,7 @@
   
     new 연산자와 생성자 함수
     https://www.w3schools.com/js/js_operators.asp
-    https://ko.javascript.info/constructor-new
+    <a href="https://ko.javascript.info/constructor-new"> 자세히보기 ko.javascript</a>
     <a href="../quizmemo.html/ex13_js.html"> ex13_js.html </a>
 
     <br>
