--- a/rwb/classHyo/js/17.html
+++ b/rwb/classHyo/js/17.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>매서드와 this</title>
+    <title>원시값의 메서드</title>
 </head>
 
 <body>
     <div></div>
   
-    매서드와 this
+    원시값의 메서드
     https://www.w3schools.com/js/js_operators.asp
-    https://ko.javascript.info/object-copy
 
-    <a href="../quizmemo.html/ex11_js.html"> ex11_js.html </a>
+    <a href="https://ko.javascript.info/primitives-methods"> 자세히보기 ko.javascript</a>
+    <a href="../quizmemo.html/ex12_js.html"> ex12_js.html </a>
 
     <br>
    <div>
@@ -25,6 +25,6 @@
 </body>
 </html>
 <script type="text/javascript">
-
+ 
 
 </script>
