--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -38,6 +38,7 @@
                 <li><a href="./ex11_js.html">ex11 바로가기 매서드와this</a>
                 <li><a href="./ex12_js.html">ex12 바로가기 매서드와this:시계만들기 </a>
                 <li><a href="./ex13_js.html">ex13 바로가기 new 연산자와 생성자::계산기와 누진기 </a>
+                <li><a href="./ex14_js.html">ex14 바로가기 원시값의 메서드 </a>
             </ul>
             <br>
             
