--- a/rwb/classHyo/js/18.html
+++ b/rwb/classHyo/js/18.html
@@ -24,6 +24,7 @@
     color: black;
     background-color: darkorange;
     font-family: "main";
+    margin-bottom: 10px;
 
     }
 </style>
@@ -38,9 +39,12 @@
    
     <a class="MainLink" href="https://ko.javascript.info/primitives-methods"> 자세히보기 ko.javascript</a>
     <br>
+    <br>
     <a class="MainLink" href="https://ko.javascript.info/string"> ex12_js.html </a>
     <br>
+    <br>
     <a class="MainLink" href="https://www.toptal.com/designers/htmlarrows/symbols/">html entity</a>
+    <br>
     <br>
    <div>
       
