--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -146,7 +146,9 @@
                             <li>[객체:기본]<a href="./js/15.html"> 매서드와 this</a></li>
                             <li>[객체:기본]<a href="./js/16.html"> new 연산자와 생성자 함수</a></li>
                             <li>[객체:자료구조와 자료형]<a href="./js/17.html"> 원시값의 메서드</a></li>
-                            <li>[객체:자료구조와 자료형]<a href="./js/17.html"> </a></li>
+                            <li>[객체:자료구조와 자료형]<a href="./js/18.html"> 숫자열</a></li>
+                            <li>[객체:자료구조와 자료형]<a href="./js/19.html"> 문자열</a></li>
+                            <li>[객체:자료구조와 자료형]<a href="./js/20.html"> </a></li>
                         </ol>
                     </ul>
                 <br>
