--- a/rwb/classHyo/js/17.html
+++ b/rwb/classHyo/js/17.html
@@ -6,20 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>원시값의 메서드</title>
 </head>
+<style>
+    @font-face{
+        font-family: "main";
+        /* src: url('/webfolders/font/maleficFont2.ttf'); */        
+        src: url('/webfoldersall/font/maleficFont2.ttf');
+        
 
+    }
+    .MainTitle{
+    font-size: 40px;
+    font-family: "main";
+    }
+    .MainLink{
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+    background-color: darkorange;
+    font-family: "main";
+    margin-bottom: 10px;
+
+    }
+</style>
 <body>
-    <div></div>
+    <div>
+
+    </div>
   
-    원시값의 메서드
-    https://www.w3schools.com/js/js_operators.asp
-
-    <a href="https://ko.javascript.info/primitives-methods"> 자세히보기 ko.javascript</a>
-    <a href="../quizmemo.html/ex12_js.html"> ex12_js.html </a>
-
+    <p class="MainTitle">원시값의 메서드</p>
+    <br>
+   
+    <a class="MainLink" href="https://ko.javascript.info/primitives-methods"> 자세히보기 ko.javascript</a>
+    <br>
+    <br>
+    <a class="MainLink" href="../quizmemo.html/ex12_js.html"> ex12_js.html </a>
+    <br>
+    <br>
+    <a class="MainLink" href="">참고 주소</a>
+    <br>
     <br>
    <div>
       
     </div>
+
 </div>
 
 </body>
