--- a/rwb/classHyo/js/copy.html
+++ b/rwb/classHyo/js/copy.html
@@ -6,20 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>매서드와 this</title>
 </head>
-
-<body>
-    <div></div>
-  
-    매서드와 this
-    https://www.w3schools.com/js/js_operators.asp
-    https://ko.javascript.info/object-copy
-
-    <a href="../quizmemo.html/ex11_js.html"> ex11_js.html </a>
-
-    <br>
-   <div>
+<style>
+  @font-face{
+      font-family: "main";
+      /* src: url('/webfolders/font/maleficFont2.ttf'); */        
+      src: url('/webfoldersall/font/maleficFont2.ttf');
       
-    </div>
+
+  }
+  .MainTitle{
+  font-size: 40px;
+  font-family: "main";
+  }
+  .MainLink{
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  background-color: darkorange;
+  font-family: "main";
+  margin-bottom: 10px;
+
+  }
+</style>
+<body>
+  <div>
+
+  </div>
+
+  <p class="MainTitle">문자열</p>
+  <br>
+ 
+  <a class="MainLink" href="https://ko.javascript.info/primitives-methods"> 자세히보기 ko.javascript</a>
+  <br>
+  <br>
+  <a class="MainLink" href="https://ko.javascript.info/string"> ex12_js.html </a>
+  <br>
+  <br>
+  <a class="MainLink" href="">참고 주소</a>
+  <br>
+  <br>
+ <div>
+    
+  </div>
 </div>
 
 </body>
