--- a/rwb/classHyo/quizmemo.html/ex15_js.html
+++ b/rwb/classHyo/quizmemo.html/ex15_js.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>문자열 ex15_js</title>
+    <title>숫자열 ex15_js</title>
 </head>
 <style>
 
 </style>
 <body>
-  문자열
-  <a href="../js/17.html"> 18.html </a>
+  숫자열
+  <a href="../js/18.html"> 18.html </a>
  <div>
 
  </div>
