--- a/rwb/classHyo/js/19.html
+++ b/rwb/classHyo/js/19.html
@@ -9,8 +9,8 @@
 <style>
     @font-face{
         font-family: "main";
-        /* src: url('/webfolders/font/maleficFont2.ttf'); */        
-        src: url('/webfoldersall/font/maleficFont2.ttf');
+        /* src: url('/webfolders/font/donounMedium.ttf'); */        
+        src: url('/webfoldersall/font/donounMedium.ttf');
         
 
     }
@@ -54,14 +54,14 @@
 </body>
 </html>
 <script type="text/javascript">
-    //따옴표
+//따옴표
     function sum(a, b) {
     return a + b;
     }
 
     alert(`1 + 2 = ${sum(1, 2)}.`); // 1 + 2 = 3.
-    //특수 기호
-    //특수 기호&특정글자에 진입하기
+//특수 기호
+//특수 기호&특정글자에 진입하기
 /*
     let guestList = "손님:\n * John\n * Pete\n * Mary";//   \n 은 줄바꾸기
 
@@ -87,5 +87,14 @@
         console.log ( c.charAt(5) );
 */
 
+//문자열의 불변성
+    let str = 'Hi';
+
+    str = 'h' + str[1]; // 문자열 전체를 교체함
+
+    alert( str ); // hi
+
+
+//대 소문자 변경하기
 
 </script>
