--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -148,7 +148,8 @@
                             <li>[객체:자료구조와 자료형]<a href="./js/17.html"> 원시값의 메서드</a></li>
                             <li>[객체:자료구조와 자료형]<a href="./js/18.html"> 숫자열</a></li>
                             <li>[객체:자료구조와 자료형]<a href="./js/19.html"> 문자열</a></li>
-                            <li>[객체:자료구조와 자료형]<a href="./js/20.html"> </a></li>
+                            <li>[객체:자료구조와 자료형]<a href="./js/20.html"> 배열</a></li>
+                            <li>[객체:자료구조와 자료형]<a href="./js/21.html"> </a></li>
                         </ol>
                     </ul>
                 <br>
