--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -39,14 +39,16 @@
                 <li><a href="./ex12_js.html">ex12 바로가기 매서드와this:시계만들기 </a>
                 <li><a href="./ex13_js.html">ex13 바로가기 new 연산자와 생성자::계산기와 누진기 </a>
                 <li><a href="./ex14_js.html">ex14 바로가기 원시값의 메서드 </a>
-                <li><a href="./ex14_js.html">ex15 바로가기 숫자열 </a>                    
-                <li><a href="./ex14_js.html">ex16 바로가기 문자열 </a>
-                <li><a href="./ex14_js.html">ex17 바로가기  </a>                
+                <li><a href="./ex15_js.html">ex15 바로가기 숫자열 </a>                    
+                <li><a href="./ex16_js.html">ex16 바로가기 문자열 </a>
+                <li><a href="./ex17_js.html">ex17 바로가기 배열 </a>     
+                <li><a href="./ex18_js.html">ex18 바로가기  </a>                                  
             </ul>
             <br>
             
             <ul>
                 <li><a href="./jsMore2.html">jsMore2 바로가기 : time 이미지 번갈아가며 바뀜 </a>
+                <li><a href="./jsMore3.html">jsMore3 바로가기 : 이벤트 :: 배열 리스트 수정  </a>
             </ul>
         </ul>
         <ul>
