--- a/rwb/index.html
+++ b/rwb/index.html
@@ -98,7 +98,13 @@
         <div class="wrap">
             <a href="./classHyo/index .html">
                 <h3>classHyo:수업 리스트 바로가기</h3>
-            </a>                    
+            </a>    
+            <a href="./studySelf/ .html">
+                <h3>studySelf: 정리목록 바로가기</h3>
+            </a>
+            <a href="./studySelf/js/array.html .html">
+                <h3>studySelf: arry 정리목록 바로가기</h3>
+            </a>                  
                     <div class="sitelist_box">
                         <p>temporary :</p>
                             <ul>
