--- a/rwb/index.html
+++ b/rwb/index.html
@@ -96,13 +96,13 @@
     </script>
     <body>
         <div class="wrap">
-            <a href="./classHyo/index.html">
+            <a href="./classHyo/index .html">
                 <h3>classHyo:수업 리스트 바로가기</h3>
             </a>    
-            <a href="./studySelf/.html">
+            <a href="./studySelf/js/index.html">
                 <h3>studySelf: 정리목록 바로가기</h3>
             </a>
-            <a href="./studySelf/js/array.html.html">
+            <a href="./studySelf/js/array.html">
                 <h3>studySelf: arry 정리목록 바로가기</h3>
             </a>                  
                     <div class="sitelist_box">
