--- a/rwb/studySelf/js/jsSelf01.html
+++ b/rwb/studySelf/js/jsSelf01.html
@@ -9,7 +9,22 @@
   <title>replit</title>
  
 </head>
+<style>
+  @font-face{
+      font-family: 'myHeart';
+      src: url('webfoldersall/font/donounMedium.ttf');
+  }
 
+  *{
+      font-family: 'myHeart';   
+        
+  }
+  a{
+    text-decoration: none;
+    color: black;
+    
+  }
+</style>
 <body>
   <pre>
     \'   \" \\   이스캐이팅
@@ -20,7 +35,7 @@
 
   </pre>
   <pre>
-    <a href="https://www.toptal.com/designers/htmlarrows/symbols/">https://www.toptal.com/designers/htmlarrows/symbols/</a>
+    <a target="_blank" href="https://www.toptal.com/designers/htmlarrows/symbols/">https://www.toptal.com/designers/htmlarrows/symbols/</a>
     &#9888;주의
     &#10163;상세
     &#10084; 제목
@@ -33,11 +48,18 @@
                 == 값만 같
                 === 값&자료형 같
                 &#9888;ture >false ; //ture
-                &#9888;NaN==NaN//false
-                       NaN<=NaN//false
-                       NaN>=NaN//false
-                       NaN!=NaN//ture
-    &#10084;논리연산자 && ||  !
+                &#9888;NaN==NaN // false
+                       NaN<=NaN // false
+                       NaN>=NaN // false
+                       NaN!=NaN // ture
+    &#10084;논리연산자 && ||  ! !!(이는 자료형을 불값으로 전환)
+                &#9888;!!false // false
+                        !!''   // false
+                        !!0    // false
+                        !!NaN  // false
+                        !!undefined// false
+                        !!null   // false
+                &#9888; 
 
 
 
@@ -59,6 +81,10 @@
   <pre>
       ture      false
       1           0
+                !!false
+                !!''
+                !!0
+                !!NaN
 
 
   </pre>
