--- a/rwb/studySelf/js/jsSelftest.html
+++ b/rwb/studySelf/js/jsSelftest.html
@@ -14,5 +14,7 @@
   console.log('문자열이 긴 경우에는'+ ' 문자열을 '+' 나눈 뒤'+' 다시 합칩시다.');
   // console.log(typeof parseInt(prompt())) ;
   console.log(parseInt(prompt())) ;
-  console.log(typeof(+));
+  console.log((5+4)*3===27);
+  console.log(!(5+4*3===27));
+  console.log(!(5+4*3===27));
   </script>
