--- a/rwb/studySelf/js/jsSelf01.html
+++ b/rwb/studySelf/js/jsSelf01.html
@@ -17,11 +17,13 @@
 
   *{
       font-family: 'myHeart';   
-        
+      font-size: 30px;
+
   }
   a{
     text-decoration: none;
     color: black;
+    background-color: chartreuse;
     
   }
 </style>
