--- a/rwb/index.html
+++ b/rwb/index.html
@@ -112,6 +112,7 @@
                                     디자인가이드 </a></li>
                                 <li><span>레이아웃 그리드시스템:내용</span><a href="https://material.io/design/layout/responsive-layout-grid.html#columns-gutters-and-margins">그리드시스템 ::gridcalculator</a></li>
                                 <li><span>자료 : 자바스크립트 </span><a href="https://ko.javascript.info/">모던자바스크립트: 자바 설명javascript.info/</a></li>
+                                <li><span>자료 : </span><a href="https://thebook.io/">길벗 웹북</a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
