--- a/rwb/studySelf/js/jsSelf01.html
+++ b/rwb/studySelf/js/jsSelf01.html
@@ -58,6 +58,25 @@
           &#10084; 변수의 값 수정
           &#10084; 변수 활용
           &#10084; 상수만들기_ const
+          &#10084; var
+    <p>&#10075;조건문&#10076;</p>
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
+    <p>&#10075;반복문&#10076;</p>
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
+    <p>&#10075;객체&#10076;</p>
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
+          &#10084; 
   </pre>
   <pre>
     \'   \" \\   이스캐이팅
