--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -49,6 +49,8 @@
             <ul>
                 <li><a href="./jsMore2.html">jsMore2 바로가기 : time 이미지 번갈아가며 바뀜 </a>
                 <li><a href="./jsMore3.html">jsMore3 바로가기 : 이벤트 :: 배열 리스트 수정  </a>
+                <li><a href="./jsMore4.html">jsMore4 바로가기 : 화면이동  </a>
+                <li><a href="./jsMore4-1.html">jsMore4-1 바로가기 : 화면이동  :: 배열 리스트 수정  </a>
             </ul>
         </ul>
         <ul>
