--- a/rwb/classHyo/js/59.html
+++ b/rwb/classHyo/js/59.html
@@ -53,7 +53,8 @@
   <a class="MainLink" href="https://ko.javascript.info/size-and-scroll-window"> 자세히보기 ko.javascript</a>
   <br>
   <br>
-  <a class="MainLink" href="https://ko.javascript.info/string"> ex12_js.html </a>
+  <a class="MainLink" href="../quizmemo.html/jsMore4.html"> jsMore4 </a>
+  <a class="MainLink" href="../quizmemo.html/jsMore4-1.html"> jsMore4-1 </a>
   <br>
   <br>
   <a class="MainLink" href="">참고 주소</a>
