--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -42,8 +42,11 @@
                 <li><a href="./ex15_js.html">ex15 바로가기 숫자열 </a>                    
                 <li><a href="./ex16_js.html">ex16 바로가기 문자열 </a>
                 <li><a href="./ex17_js.html">ex17 바로가기 배열 </a>     
-                <li><a href="./ex18_js.html">ex18 바로가기  </a>                                  
-            </ul>
+                <li><a href="./ex18_js.html">ex18 바로가기  </a>
+
+                <li><a href="./ex50_js.html">ex50 바로가기 좌표 요소움직이기 (마우스)</a> 
+                <li><a href="./ex50-1_js.html">ex50-1 바로가기  좌표 요소움직이기 (마우스) 소스보기</a>             
+                </ul>
             <br>
             
             <ul>
@@ -51,6 +54,7 @@
                 <li><a href="./jsMore3.html">jsMore3 바로가기 : 이벤트 :: 배열 리스트 수정  </a>
                 <li><a href="./jsMore4.html">jsMore4 바로가기 : 화면이동  </a>
                 <li><a href="./jsMore4-1.html">jsMore4-1 바로가기 : 화면이동  :: 배열 리스트 수정  </a>
+                <li><a href="./jsMore5.html">jsMore5 바로가기 : 이벤트 :: 스크롤 상태바   </a>
             </ul>
         </ul>
         <ul>
