--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -55,6 +55,7 @@
                 <li><a href="./jsMore4.html">jsMore4 바로가기 : 화면이동  </a>
                 <li><a href="./jsMore4-1.html">jsMore4-1 바로가기 : 화면이동  :: 배열 리스트 수정  </a>
                 <li><a href="./jsMore5.html">jsMore5 바로가기 : 이벤트 :: 스크롤 상태바   </a>
+                <li><a href="./jsMore6.html">jsMore6 바로가기 : 이벤트 :: 스크롤 상태바 +메뉴  </a>
             </ul>
         </ul>
         <ul>
