--- a/rwb/classHyo/quizmemo.html/jsMore6.html
+++ b/rwb/classHyo/quizmemo.html/jsMore6.html
@@ -11,6 +11,23 @@
 		margin: 0;
 		padding: 0;
 	}
+	div.section:nth-child(2) {
+		height: 500px;
+		background-color: brown;
+	}
+	div.section:nth-child(3) {
+		height: 300px;
+		background-color: orangered;
+	}
+	div.section:nth-child(4) {
+		height: 700px;
+		background-color: darkgreen;
+	}
+	div.section:nth-child(5) {
+		height: 900px;
+		background-color: darkmagenta;
+	}
+
 	header {
 		height: 100px;
 		background-color:darkorange;
@@ -33,6 +50,10 @@
     	height: 100%;
     	background-color:chartreuse;
 	}
+	.fixMenu {
+		position: fixed;
+		top: 150px;
+	}
 </style>
 <body>
 <header>
@@ -40,7 +61,22 @@
 	<div>
 		<div class="scrollbar" id="scrollbar"></div>
 	</div>
+	
 </header>
+<div class="fixMenu">
+	<ul>
+		<li>11111</li>
+		<li>22222</li>
+		<li>33333</li>
+		<li>44444</li>
+		<li>55555</li>
+	</ul>
+</div>
+<div class = "section"></div>
+<div class = "section"></div>
+<div class = "section"></div>
+<div class = "section"></div>
+<div class = "section"></div>
 </body>
 </html>
 <script>
