--- a/rwb/classHyo/quizmemo.html/jsMore6.html
+++ b/rwb/classHyo/quizmemo.html/jsMore6.html
@@ -126,7 +126,11 @@ window.addEventListener('scroll', function() {
 				`;
 				
 			}
-		}) 
+			let secs = document.querySelectorAll (".section");
+			let lis = document.querySelectorAll (".fixMenu> ul > li");
+
+			
+		}); 
 
 	});
 
