--- a/rwb/classHyo/quizmemo.html/jsMore6.html
+++ b/rwb/classHyo/quizmemo.html/jsMore6.html
@@ -100,39 +100,49 @@ window.addEventListener('scroll', function() {
 });
 */
 	//방법 2 https://wazacs.tistory.com/41 참조
-	window.addEventListener('load',function() {
-		window.addEventListener('scroll',function(){
-			let progress = document.querySelector("header > div:last-child");
-			let progressTop = progress.offsetTop;
-			let winTop = window.scrollY;
-			let html = document.documentElement;
-			let docHeigh = html.scrollHeight;
-			let docWiewHeight = html.clientHeight;
-			let totalDocHeight = docHeigh - docWiewHeight;
-				console.log( totalDocHeight );
-				console.log( winTop / totalDocHeight *100 );
-			
-				progress.querySelector("div").style.width = winTop / totalDocHeight *100 + '%';
+	window.addEventListener('load', function() {
+      let progress = document.querySelector("header > div:last-child");
+      let progressTop = progress.offsetTop;
 
-			if ( progressTop <= winTop ) {
-				progress.style.cssText = `
-				position : fixed;
-				top : 0
-				`;
-			} else {
-				console.log ('test');
-				progress.style.cssText = `
-				position: static
-				`;
-				
-			}
-			let secs = document.querySelectorAll (".section");
-			let lis = document.querySelectorAll (".fixMenu> ul > li");
+      let secs = document.querySelectorAll('.section');
+      let lis = document.querySelectorAll('.fixMenu > ul > li'); 
 
-			
-		}); 
+      window.addEventListener('scroll', function() {
+        chkReader(progress, progressTop);
+        let index = 0;
 
-	});
+        lis.forEach(function(val, i) {
+          val.style.background = 'transparent';
+        });
+
+        secs.forEach(function(sec, i) {
+          if(sec.offsetTop <= window.scrollY && (sec.offsetTop + sec.clientHeight) >= window.scrollY) {
+            lis[index].style.background = "red";
+          }
+          index++;
+        });
+      });
+    });
+
+    function chkReader(progress, progressTop) {
+      let winTop = window.scrollY;
+      let html = document.documentElement;
+      let docHeight = html.scrollHeight;
+      let docViewHeight = html.clientHeight;
+      let totalDocHeight = docHeight - docViewHeight;
+      progress.querySelector("div").style.width = winTop / totalDocHeight * 100 + '%';
+
+      if (progressTop <= winTop) {
+        progress.style.cssText = `
+          position: fixed; 
+          top: 0
+        `;
+      } else {
+        progress.style.cssText = `
+          position: static;
+        `;
+      }
+    }
 
 
 /*
