--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -46,6 +46,7 @@
 
                 <li><a href="./ex50_js.html">ex50 바로가기 좌표 요소움직이기 (마우스)</a> 
                 <li><a href="./ex50-1_js.html">ex50-1 바로가기  좌표 요소움직이기 (마우스) 소스보기</a>             
+                <li><a href="./ex50-1_js.html">ex50-1 바로가기  좌표 요소움직이기 (마우스) 소스보기</a>             
                 </ul>
             <br>
             
@@ -56,7 +57,10 @@
                 <li><a href="./jsMore4-1.html">jsMore4-1 바로가기 : 화면이동  :: 배열 리스트 수정  </a>
                 <li><a href="./jsMore5.html">jsMore5 바로가기 : 이벤트 :: 스크롤 상태바   </a>
                 <li><a href="./jsMore6.html">jsMore6 바로가기 : 이벤트 :: 스크롤 상태바 +메뉴  </a>
-            </ul>
+                <li><a href="./jsMore7.html">jsMore7 바로가기 : 달력만들기 </a> 
+                <li><a href="./jsMore7-1.html">jsMore7-1 바로가기 : 달력만들기 (예)</a>
+                <li><a href="./jsMore8.html">jsMore8 바로가기 : 메뉴바 (예)</a> 
+                </ul>
         </ul>
         <ul>
             <li>memo</li>
