--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -175,7 +175,7 @@
                     </ul>
                 <br>
                 <hr>
-
+                <div><a href="./test1/index.html">test1 바로가기</a></div>
             <div><a href="./quizmemo.html/index.html">quiz 바로가기</a></div>
         </div>
         <div class="wrap">
