--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -47,7 +47,7 @@
                 <h3>About</h3>
                 <p> &#10077; 명작 속<br> 그들의, 그들의 세상에서의 죽음 &#10078;</p>
                 <div class="contAboutBox">
-                    <div class="contAboutB_textB">
+                    <div class="contAboutB_itemTop">
                         <p>Some text about me. Some text about me. I am lorem ipsum consectetur 
                             adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
                             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -59,8 +59,45 @@
                             ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </p>
                     </div>
-                    <div>
-
+                    <div class="contAboutB_itemBottom">
+                        <div>
+                            <p>기간</p>
+                            <p>2022-07-08 ~ 2022-09-08</p>
+                            <br>
+                            <p>주최/후원</p>
+                            <p>부산혜미술관</p>
+                            <br>
+                            <p>장소</p>
+                            <p>부산혜미술관: 부산광역시 해운대구 우2동 해운대로 407 신세계프라자 7층</p>
+                            <button onclick="maps()" id="mapB">지도 보기</button>
+                            <div class="mapOn" id="mapOn">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.551038158803!2d129.13842911560795!3d35.167816080317216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35688d5f58a8bb1b%3A0x7ef8a517ba5f5efc!2z7Zqo7ISx7KeB7JeF7KCE66y47ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1656489308856!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                            <br>                            
+                        </div>
+                        <div>
+                            <p>관람료</p>
+                            <hr>
+                            <div>
+                                <table>
+                                    <tr>
+                                        <th>구분</th>
+                                        <th>금액</th>
+                                    </tr>
+                                    <tr>
+                                        <td>일반</td>
+                                        <td>(24개월 이상)</td>
+                                        <td>15,000원</td>
+                                    </tr>
+                                    <tr>
+                                        <td>영유아</td>
+                                        <td>(24개월 미만)</td>
+                                        <td>무료</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div></div>
                     </div>
                 </div>
 
