--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -243,34 +243,34 @@
                 </div>
                 <div class="contArtistBox">
                     <div>
-                        <!-- 웹 참조  -->
+                        <!-- 웹 참조  https://yesulsalon.blogspot.com/2019/11/pieter-claesz.html-->
                         <div class="contArtistBox_imgwarp">
                             <div>
-                                <img src="https://i.ibb.co/VJdVhZy/image.jpg" alt="루크 필데스 화가 사진">
+                                <img src="https://i.ibb.co/FV5sggJ/image.jpg" alt="피터르 클레즈 화가 사진">
                             </div>
                         </div>
                         <div class="contArtistBox_textwarp">
                             <div>
-                                <p class="artistKName">루크 필데스</p><p class="artistName">Sir Samuel Luke Fildes</p>
-                                <span class="artistTime">(1843년 10월 3일 ~ 1927년 2월 28일)</span>
-                                <span>영국</span>
-                                <span>본 전시작 : 『의사』</span>
+                                <p class="artistKName">피터르 클레즈</p><p class="artistName">Pieter Claesz</p>
+                                <span class="artistTime">(1660년 ~ 1597년)</span>
+                                <span>독일</span>
+                                <span>본 전시작 : 『바니타스 정물화』</span>
                             </div>
                         </div>
                     </div>
                     <div>
-                        <!-- 웹 참조 https://ko.wikipedia.org/wiki/%ED%94%BC%ED%84%B0%EB%A5%B4_%EB%B8%8C%EB%A4%BC%ED%97%90_%EB%8D%94_%EC%95%84%EC%9A%B0%EB%8D%94 -->
+                        <!-- 웹 참조 https://ko.wikipedia.org/wiki/%EC%9E%90%ED%81%AC%EB%A3%A8%EC%9D%B4_%EB%8B%A4%EB%B9%84%EB%93%9C -->
                         <div class="contArtistBox_imgwarp">
                             <div>
-                                <img src="https://i.ibb.co/WpZTBkf/image.jpg" alt="피터르 브뤼헐 더 아우더 화가 사진">
+                                <img src="https://i.ibb.co/zS4XB1v/image.jpg" alt="자크루이 다비드 화가 사진">
                             </div>
                         </div>
                         <div class="contArtistBox_textwarp">
                             <div>
-                                <p class="artistKName">피터르 브뤼헐 더 아우더</p><p class="artistName">Pieter Brueghel de Oude</p>
-                                <span class="artistTime">(1527년경 ~ 1569년 9월 30일)</span>
-                                <span>네덜란드</span>
-                                <span>본 전시작 : 『죽음의 승리』</span>
+                                <p class="artistKName">자크루이 다비드</p><p class="artistName">Jacques-Louis David</p>
+                                <span class="artistTime">(1748년 8월 30일 ~ 1825년 12월 29일)</span>
+                                <span>프랑스</span>
+                                <span>본 전시작 : 『소크라테스의 죽음』</span>
                             </div>
                         </div>
                     </div>
