--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -170,6 +170,7 @@
                             <li>[문서]<a href="./js/58.html"> 요소 사이즈와 스크롤</a></li>
                             <li>[문서]<a href="./js/59.html"> 브라우저 창 사이즈와 스크롤</a></li>
                             <li>[문서]<a href="./js/60.html"> 좌표</a></li>
+                            <li>[네트워크]<a href="./js/70.html"> 비동기</a></li>
 
                         </ol>
                     </ul>
