--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -43,7 +43,7 @@
             <div class="contHome" id="contHome">
                 <div class="contHomeBox">
                     <h1>끝자락 그리고 ___ </h1>
-                    <p>죽을 대하는 그들의 자세: 테마 기획 온라인전시회 2016</p>
+                    <p>죽을 대하는 그들의 자세:<br> 테마 기획 온라인전시회 2022</p>
                     <img src="https://i.ibb.co/5jq3rsJ/test1-3.jpg" alt="『죽음의 성』, 아놀드 뵈클린">
                     <button>Downoad</button>
                 </div>
